--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -3,3 +3,248 @@
 Stylesheet: ベーススタイル
 
 ******************************************************************/
+
+body {
+    font-family: 'Kameron', 'Noto Sans JP', sans-serif;
+}
+.font-sm {
+    font-size: 14px;
+}
+.font-md {
+    font-size: 17px;
+}
+.font-lr {
+    font-size: 17px;
+}
+.font-lg {
+    font-size: 25px;
+}
+.mb-sm {
+    margin-bottom: 16px !important;
+}
+.mb-lg {
+    margin-bottom: 80px !important;
+}
+.pb-sm {
+    padding-bottom: 16px !important;
+}
+.pb-lg {
+    padding-bottom: 80px !important;
+}
+.content-width {
+    width: 90%;
+    margin: 0 auto;
+    max-width: $contentMaxWidth;
+}
+.flex {
+    display: flex;
+    flex-direction: column;
+}
+
+.purple {
+    color: $cWineRed;
+}
+
+.main-title {
+    @extend .font-lg;
+    font-weight: 600;
+    margin-bottom: 0;
+    display: block;
+}
+.sub-title {
+    @extend .font-sm;
+    color: $cSubTitle;
+}
+
+#container {
+    transition: transform 0.5s, box-shadow 0.5s;
+    background-color: $cWhite;
+    z-index: 10;
+    position: relative;
+}
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: transparent;
+    height: $navHeight;
+    display: flex;
+    align-items: center;
+    z-index: 100;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 10px 0 25px -10px rgba(0, 0, 0, 0.5);
+
+    &__nav {
+        display: none;
+    }
+    &__nav {
+        @extend .flex;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+    }
+    &__ul {
+        display: flex;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
+    &__li {
+        padding: 0;
+        margin-left: 20px;
+
+        & > a {
+            color: $cBlack;
+            text-decoration: none !important;
+            text-transform: uppercase;
+        }
+    }
+    & .logo {
+        font-size: 38px;;
+        justify-content: center;
+    }
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        @extend .content-width;
+    }
+}
+
+.travel {
+    @extend .content-width;
+    @extend .mb-lg;
+
+    &__inner {
+        @extend .flex;
+        justify-content: space-between;
+        padding: 50px;
+        background-color: $cBgGray;
+    }
+    &__sub {
+        @extend .mb-sm;
+    }
+    &__img {
+        height: 300px;      
+        & > img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+    }
+    &__texts {
+        @extend .pb-sm;
+    }
+}
+
+.houses {
+    @extend .content-width;
+    @extend .mb-lg;
+
+    &__inner {
+        @extend .flex;
+    }
+    &__item {
+        & > iframe {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    &__title {
+        @extend .font-lr;
+        @extend .mb-sm;
+    }
+}
+
+.popular {
+    &__inner {
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 90%;
+            background-color: $cBgGray;
+        }
+    }
+    &__header {
+        @extend .content-width;
+    }
+    &__container {
+        position: relative;
+        z-index: 2;
+        @extend .flex;
+        @extend .content-width;
+    }
+    &__title {
+        @extend .font-md;
+        @extend .mb-sm;
+        @extend .pb-lg;
+    }
+    &__img {
+        height: 150px;
+        overflow: hidden;
+        margin-bottom: 5px;
+
+        & > img {
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
+        }
+    }
+}
+
+.logo {
+    font-size: 42px;
+    display: flex;
+
+    &__img {
+        width: 1.7em;
+    }
+
+    &__title {
+        color: red;
+    }
+}
+
+.footer {
+    padding:  60px 0;
+    @extend .content-width;
+
+    &__nav {
+        @extend .flex;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+    }
+    &__ul {
+        @extend .flex;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
+    &__li {
+        padding: 0;
+        margin: 10px;
+
+        & > a {
+            color: $cSubTitle;
+        }
+    }
+    & .logo {
+        font-size: 38px;;
+        justify-content: center;
+    }
+}
+
+.timer {
+    span {
+        font-size: 45px;
+    }
+}
