--- a/styles/breakpoints/_1280up.scss
+++ b/styles/breakpoints/_1280up.scss
@@ -3,3 +3,21 @@
 Stylesheet: 1280px以上のモニタで適用
 
 ******************************************************************/
+
+.travel {
+    &__inner {
+        padding: 50px 150px;
+    }
+}
+
+.houses {
+    &__item {
+        flex-basis: 32%;
+    }
+}
+
+.popular {
+    &__item {
+        flex-basis: 23%;
+    }
+}
