--- a/styles/breakpoints/_600up.scss
+++ b/styles/breakpoints/_600up.scss
@@ -3,3 +3,42 @@
 Stylesheet: 600px以上のタブレットやモニタで適用
 
 ******************************************************************/
+.flex {
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.travel {
+    &__img,
+    &__texts {
+        flex-basis: 47%;
+    }
+}
+
+.houses {
+    &__inner {
+        justify-content: space-between;
+    }
+    &__item {
+        flex-basis: 47%;
+        margin-bottom: 60px;
+    }
+}
+.popular {
+    &__container {
+        justify-content: space-between;
+    }
+    &__item {
+        flex-basis: 47%;
+    }
+}
+
+.footer{
+    & .logo {
+        justify-content: flex-start;
+    }
+    &__li {
+        margin-left: 0;
+        margin-right: 30px;
+    }
+}
