--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,8 @@
+@import "modules/variables";
+@import "modules/mixin";
+@import "modules/hero-slider";
+@import "modules/mobile-menu";
+
 @import "breakpoints/base";
 
 @media (min-width: 480px) {
