--- a/styles/breakpoints/_960up.scss
+++ b/styles/breakpoints/_960up.scss
@@ -35,7 +35,7 @@ Stylesheet: 960px以上のモニタで適用
     }
 }
 
-.travel {
+.about {
     &__img {
         height: 400px;      
     }
@@ -44,7 +44,7 @@ Stylesheet: 960px以上のモニタで適用
     }
 }
 
-.popular {
+.photo {
     &__item {
         flex-basis: 25%;
     }
