--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,8 @@
 @import "modules/variables";
 @import "modules/mixin";
 @import "modules/hero-slider";
+@import "modules/text-animation";
+@import "modules/image-slide";
 @import "modules/mobile-menu";
 
 @import "breakpoints/base";
